# RM_Sentry_2026

./: .gitignore  .gitmodules  test.rviz
DecisionNode/src/: CMakeLists.txt
DecisionNode/src/decision_node/: CMakeLists.txt  MCU_COMMUNICATOR_README.md  QUICK_REFERENCE.md  package.xml
DecisionNode/src/decision_node/config/: backup_tree.xml  strategy_tree.xml
DecisionNode/src/decision_node/include/decision_node/: central_occupiable.hpp  chase.hpp  mcu_comm.hpp  mcu_communicator.hpp  motion_change.hpp  recover_change.hpp
DecisionNode/src/decision_node/launch/: command_test.launch  mcu_communicator.launch  mcu_communicator_with_decision.launch  nav_cmd_publisher.launch  strategy_decision_tmp.launch
DecisionNode/src/decision_node/src/: central_occupiable.cpp  chase.cpp  command_test.cpp  mcu_communicator.cpp  mcu_communicator.cpp.backup  motion_change.cpp  recover_change.cpp  ser2msg_decision_givepoint.cpp.backup  strategy_node.cpp  test.cpp
HIT_Integrated_test/: HIT_intergration_test.launch  HIT_pointlio_map_builder.launch  MAP_GRADIENT_FIX_REPORT.md.bak  RVIZ_LAUNCH_README.md  hit_env.bash  test.rviz  test_localization_constraints.sh
HIT_Integrated_test/mds/: DISPENSE_MODE_REPORT.md  FIX44_DIAGNOSTIC_REPORT.md  HIT_COORDINATE_SYSTEMS_REPORT.md  HIT_LIDAR_PIPELINE_REPORT.md  HIT_MCU_COMMAND_PIPELINE_REPORT.md  LOCALIZATION_FIX_REPORT.md  NUC_ALIGNMENT_REPORT.md  OBSTACLE_AVOIDANCE_FIX_REPORT.md  OLD_NAV_COORDINATE_SYSTEMS_REPORT.md  OLD_NAV_LIDAR_PIPELINE_REPORT.md  PARAMETER_TUNING_GUIDE.md  PATH_GENERATION_PIPELINE_REPORT.md  PLANNING_FIX_HISTORY.md  PLAN_1_MINCO_SPACETIME.md  PLAN_2_SFC_TRAJECTORY_GEN.md  PLAN_3_CERES_SOLVER.md  PROBLEM_REPORT_CMD_VEL_FLUCTUATION.md  PROBLEM_REPORT_LIDAR_TOPICS.md  PROBLEM_REPORT_LOCALIZATION_TILT.md  README.md  REPO_SYNC_REPORT.md  SYSTEM_ARCHITECTURE_REPORT.md  TOPO_GUARD_CONNECTION_POINTS.md  UPSIDE_DOWN_POINTCLOUD_FIX_REPORT.md  YAW_EXCHANGE_REMOVAL_REPORT.md  Z_FILTER_FIX_REPORT.md
HIT_Integrated_test/sim_nav/src/: CMakeLists.txt
HIT_Integrated_test/sim_nav/src/Point-LIO/PCD/: Feb5_calibration.pcd  Feb5_original.pcd  pcd2pcd.py
HIT_Integrated_test/sim_nav/src/Point-LIO/config/: avia.yaml
HIT_Integrated_test/sim_nav/src/Point-LIO/src/: laserMapping.cpp  parameters.cpp  parameters.h
HIT_Integrated_test/sim_nav/src/bot_sim/: CMakeLists.txt  package.xml
HIT_Integrated_test/sim_nav/src/bot_sim/launch_real/: dbscan_bfs_3D.launch  dstarlite.launch  dwa_optimizer.launch  imu_filter.launch  lidar_filter_pointcloud.launch  lidar_merge_pointcloud.launch  map_saver.launch  map_server.launch  map_server_test.launch  map_ssaver.launch  real_robot_transform.launch  ser2msg_tf_decision_givepoint.launch
HIT_Integrated_test/sim_nav/src/bot_sim/map/: 20250328t.pgm  20250328t.yaml  Dec23.pgm  Dec23.yaml  Dec24.pgm  Dec24.xcf  Dec24.yaml  Feb12.pgm  Feb12.yaml  Jan08.pgm  (+25 more)
HIT_code/: mcu_communicator.cpp
HIT_code/sentry_planning_ws/: LICENSE  README.md  nohup.out
HIT_code/sentry_planning_ws/src/sentry_msgs/: .gitignore  CMakeLists.txt
HIT_code/sentry_planning_ws/src/sentry_planning/: .gitignore  README.md
HIT_code/sentry_planning_ws/src/sentry_planning/trajectory_generation/: CMakeLists.txt  package.xml
HIT_code/sentry_planning_ws/src/sentry_planning/trajectory_generation/cfg/: 2D_map.rviz  2D_map.yaml
HIT_code/sentry_planning_ws/src/sentry_planning/trajectory_generation/include/: Astar_searcher.h  RM_GridMap.h  TopoSearch.h  node.h  path_smooth.h  plan_manager.h  reference_path.h  replan_fsm.h  visualization_utils.h
HIT_code/sentry_planning_ws/src/sentry_planning/trajectory_generation/include/root_solver/: cubic_spline.hpp  lbfgs.hpp  minco_trajectory.hpp
HIT_code/sentry_planning_ws/src/sentry_planning/trajectory_generation/launch/: global_searcher.launch  global_searcher_debug.launch  global_searcher_sim.launch  rviz.launch
HIT_code/sentry_planning_ws/src/sentry_planning/trajectory_generation/map/: map_meta.yaml
HIT_code/sentry_planning_ws/src/sentry_planning/trajectory_generation/src/: Astar_searcher.cpp  RM_GridMap.cpp  TopoSearch.cpp  path_smooth.cpp  plan_manager.cpp  reference_path.cpp  replan_fsm.cpp  trajectory_generator_node.cpp  visualization_utils.cpp
HIT_code/sentry_planning_ws/src/sentry_planning/trajectory_tracking/: CMakeLists.txt  package.xml
HIT_code/sentry_planning_ws/src/sentry_planning/trajectory_tracking/cfg/: task.info  trajectory_planning.yaml
HIT_code/sentry_planning_ws/src/sentry_planning/trajectory_tracking/include/: RM_GridMap.h  local_planner.h  tracking_manager.h  visualization_utils.h
HIT_code/sentry_planning_ws/src/sentry_planning/trajectory_tracking/include/ocs2_sentry/constraint/: SentryRobotCollisionConstraint.h  SentryRobotStateInputConstraint.h
HIT_code/sentry_planning_ws/src/sentry_planning/trajectory_tracking/launch/: trajectory_planning.launch  trajectory_planning_debug.launch  trajectory_planning_sim.launch
HIT_code/sentry_planning_ws/src/sentry_planning/trajectory_tracking/src/: KMF.cpp  RM_GridMap.cpp  hit_bridge.cpp  local_planner.cpp  tracking_manager.cpp  tracking_node.cpp  visualization_utils.cpp
HIT_code/sentry_planning_ws/src/sentry_planning/trajectory_tracking/src/ocs2_sentry/: SentryRobotInterface.cpp
HIT_code/sentry_planning_ws/src/sentry_planning/trajectory_tracking/src/ocs2_sentry/constraint/: SentryRobotCollisionConstraint.cpp
HIT_code/sentry_planning_ws/tools/: map_meta.yaml  pcd_to_maps.py
HIT_code/sentry_planning_ws/tools/tmp_maps/: map_meta.yaml
ws_cloud/src/livox_cloudpoint_processor/launch/: lidar_filter_pointcloud.launch
ws_cloud/src/livox_cloudpoint_processor/src/: livox_cloudpoints_processor.cpp
ws_livox/src/livox_ros_driver2/: CMakeLists.txt
ws_livox/src/livox_ros_driver2/config/: MID360_config.json  display_point_cloud_ROS1.rviz  dual_MID360_config.json  mixed_HAP_MID360_config.json  mixed_HAP_MID360_config.json.bak
ws_livox/src/livox_ros_driver2/launch_ROS1/: msg_mixed.launch  msg_mixed_test.launch  rviz_mixed.launch
ws_livox/src/livox_ros_driver2/scripts/: lidar_converter.py
ws_livox/src/livox_ros_driver2/src/: lds.cpp
(+31 files in other folders)
